--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -71,7 +71,7 @@
   <table class="item-box">
     <tr>
       <td>
-        <details {{#if item.system.itemOpen }}open="true" {{/if}}>
+        <details open="true">
           <summary>
             <p class="allcaps">{{ item.name }} AMMO</p>
           </summary>
