--- a/templates/item/item-ammo-sheet.hbs
+++ b/templates/item/item-ammo-sheet.hbs
@@ -21,7 +21,7 @@
         <tr>
           <td><input type="number" name="system.cost" value="{{ system.cost }}" /></td>
           <td><input type="number" name="system.load" value="{{ system.load }}" /></td>
-          <td><input type="number" name="system.quantity" value="{{ system.quantity }}" /></td>
+          <td><input type="number" name="system.quantity" value="{{ system.quantity }}" min="0" /></td>
           <td><input type="text" name="system.type" value="{{ system.type }}" /></td>
         </tr>
       </table>
