--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -46,6 +46,7 @@
                   </td>
                   <td style="vertical-align: middle" class="statusnum">
                     <input
+					style="width:200px;"
                       type="number"
                       name="system.carryLoad.value"
                       value="{{ system.carryLoad.value }}"
