Ranged Weapon Style Updates

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -7,7 +7,7 @@
  <table class="item-box">
     <tr>
       <td>
-        <details {{#if item.system.itemOpen }}open="true" {{/if}}>
+        <details open="true">
           <summary>
             <p class="allcaps">{{ item.name }} ARMOR</p>
           </summary>
