--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -25,7 +25,7 @@
               <td>{{ system.armorClass.value }}</td>
               <td>{{ system.damageThreshold.value }}</td>
               <td>{{ system.slots.value }}</td>
-              <td>{{ system.load.value }}</td>
+              <td>{{ system.load }}</td>
               <td>{{ system.strReq.value }}</td>
             </tr>
 			 <tr>
