--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -106,14 +106,13 @@
               name="system.penalties.radiation.value"
               value="{{ system.penalties.radiation.value }}"
               min="0"
-			  step=".1"
             />
 			</td><td>
             <input
               type="number"
 			  style="width:25px;"
-              name="system.penalties.irradiation.value"
-              value="{{ system.irradiation.value }}"
+              name="system.irradiated"
+              value="{{ system.irradiated }}"
               min="0"
 			  max="10"
 			  title="For when you get Irradiated: at 10, reset to 0 and add 1 to Rad Lvl"
