--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -84,7 +84,6 @@
                               type="number"
                               name="system.health.value"
                               value="{{ system.health.value }}"
-                              max="{{ system.health.max }}"
                             />
                             /
                             <input
@@ -101,7 +100,6 @@
                               style="width: 90%; float: right"
                               class="statusbar stamina"
                               value="{{ system.stamina.value }}"
-                              max="{{ system.stamina.max }}"
                             >
                               {{ system.stamina.value }}
                             </progress>
@@ -113,7 +111,6 @@
                               type="number"
                               name="system.stamina.value"
                               value="{{ system.stamina.value }}"
-                              max="{{ system.stamina.max }}"
                             />
                             /
                             <input
@@ -130,7 +127,6 @@
                               style="width: 90%; float: right"
                               class="statusbar stamina"
                               value="{{ system.actionPoints.value }}"
-                              max="{{ system.actionPoints.max }}"
                             >
                               {{ system.actionPoints.value }}
                             </progress>
@@ -288,7 +284,7 @@
                     for="system.abilities.{{ key }}.value"
                     class="resource-label rollable flexlarge align-left"
                     data-rollable
-                    data-roll="d20+{{ ability.mod }}-{{ ../system.penaltyTotal }}"
+                    data-roll="d20+{{ ability.mod }}-@penaltyTotal"
                     data-label="{{ ability.label }}"
                     >{{ ability.label }}</label
                   >
