--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -68,6 +68,7 @@
 </td>
 <td>
 <!-- AMMO Slot -->
+{{#if ammos}}
   <table class="item-box">
     <tr>
       <td>
@@ -105,6 +106,7 @@
     </tr>
   </table>
 </details>
+    {{/if}}
 </td>
 </tr>
 </table>
