--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -28,7 +28,7 @@
 </li>
 {{/unless}}
 {{/each}}
-</td><td  style="width:45%;vertical-align:top">
+</td><td style="width:45%;vertical-align:top">
 <h3>Melee Weapons</h3>
 {{#each meleeWeapons as |item id|}}
 {{#unless item.system.itemEquipped}}
@@ -57,7 +57,10 @@
 <table class="backpack">
   <tr>
     <td>
+
         {{#if foodAnddrinks}}
+<table class="foodanddrinks"><tr><td>FOOD AND DRINKS</td></tr></table>			
+	<div style="max-height:300px;overflow:scroll">	
       <table class="foodanddrinks">
 		<tr><td>Name</td><td>Description</td><td>Load</td><td></td></tr>
         {{#each foodAnddrinks as |item id|}}
@@ -94,20 +97,56 @@
         </tr>
         {{/each}}
       </table>
+	  </div>
         {{/if}}
     </td>
     <td class="spacer"></td>
-    <td style="min-width:300px">
- 
-    </td>
-  </tr>
-  <tr>
-      <td colspan=999 >
-      <div style="width:75%;display:block;margin:auto;">
+      <td>
+
         {{#if chems}}
-          <table  class="foodanddrinks">
-		<tr><td colspan=999>CHEMS</td></tr>
+		<table class="foodanddrinks"><tr><td>CHEMS</td></table>
+      <div style="display:block;margin:auto;max-height:300px;overflow:scroll">		
+          <table class="foodanddrinks">
         {{#each chems as |item id|}}
+        <tr>
+          <td style="width: 100px">
+            <span class="label"> {{ item.name }} ({{ system.quantity }}) </span>
+          </td>
+
+          <td>
+            {{{ item.system.description }}}
+          </td>
+          <td class="td-controls">
+            <li class="item flexrow" data-item-id="{{ item._id }}">
+              <div class="item-controls">
+                <a
+                  class="item-control"
+                  data-edit
+                  data-item-id="{{ item._id }}"
+                  title="{{localize 'DOCUMENT.Update' type='item'}}"
+                >
+                  <i class="fas fa-edit"></i>
+                </a>
+                <a
+                  class="item-control item-delete"
+                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
+                >
+                  <i class="fas fa-trash"></i>
+                </a>
+              </div>
+            </li>
+          </td>
+        </tr>
+        {{/each}}
+      </table>
+	  </table>
+	  		  <div>
+          {{/if}}
+
+        {{#if miscItems}}
+          <table class="equipped-stats">
+		<tr><td colspan=999>MISCELLANEOUS ITEMS</td></tr>
+        {{#each miscItems as |item id|}}
         <tr>
           <td>
             <span class="label" style="margin-right: 5px">
@@ -141,7 +180,7 @@
         </tr>
         {{/each}}
       </table>
-          {{/if}}
+          {{/if}}		  
       </div>
     </td>
   </tr>
