--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -30,7 +30,7 @@
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
       rollData prop. --}}
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner
+      {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror"
       editable=editable}}
     </div>
 
