--- a/templates/item/item-perk-sheet.hbs
+++ b/templates/item/item-perk-sheet.hbs
@@ -56,7 +56,7 @@
     <div class="tab htmlfield" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
       rollData prop. --}}
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner
+      {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror"
       editable=editable}}
     </div>
     {{!-- Effects Tab --}}
